@@ -17,6 +17,7 @@
 - Bug #0000003 fixed
 - Bug fixed: objects was not marked as modified when platform name or agent
   version changes
+- Windows console: implemented cell edit by double click in policy editor
 
 
 *
